# code-workspace-dsv-fods

./: .gitignore  __main__.py  fods
fods-app/: Dockerfile
fods_app/: __init__.py  __main__.py  app.py  environment.yml  pyproject.toml
fods_app/data/: Credit.csv
fods_app/notebooks/: notes.ipynb
fods_app/resources/: stats.py
