[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fods-app"
version = "0.1.0"
description = "Foundations of Data Science application"
readme = "README.md"
requires-python = ">=3.14.3"
license = {text = "MIT"}
authors = [
    {name = "Christian Schinkel", email = "christian.schinkel@me.com"}
]
keywords = ["data-science", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14.3",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pylance>=0.35.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ChristianSchinkel/code-workspace-dsv-fods"
Documentation = "https://github.com/ChristianSchinkel/code-workspace-dsv-fods"
Repository = "https://github.com/ChristianSchinkel/code-workspace-dsv-fods.git"
Issues = "https://github.com/ChristianSchinkel/code-workspace-dsv-fods/issues"

[tool.setuptools]
packages = ["fods_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=fods_app --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.14.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
